k8s-manifests/adservice.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: adservice
  template:
    metadata:
      labels:
        app.kubernetes.io/name: adservice
    spec:
      containers:
      - name: adservice-container
        image: kaustavsdet/adservice:v1
        ports:
        - containerPort: 9555
        resources:
          requests:
            cpu: 200m
            memory: 150Mi
          limits:
            cpu: 300m
            memory: 180Mi
        readinessProbe:
          grpc:
            port: 9555
          initialDelaySeconds: 20
          periodSeconds: 15
        livenessProbe:
          grpc:
            port: 9555
          initialDelaySeconds: 20
          periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: adservice
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: adservice
  ports:
  - port: 9555
    targetPort: 9555
    name: grpc
