k8s-manifests/checkoutservice.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkoutservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: checkoutservice
  template:
    metadata:
      labels:
        app.kubernetes.io/name: checkoutservice
    spec:
      containers:
      - name: checkoutservice-container
        image: kaustavsdet/checkoutservice:v1
        ports:
        - containerPort: 5050
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 150Mi
        readinessProbe:
          grpc:
            port: 5050
          initialDelaySeconds: 15
          periodSeconds: 10
        livenessProbe:
          grpc:
            port: 5050
          initialDelaySeconds: 15
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: cartservice
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: checkoutservice
  ports:
  - port: 5050
    targetPort: 5050
    name: grpc
