k8s-manifests/currencyservice.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currencyservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: currencyservice
  template:
    metadata:
      labels:
        app.kubernetes.io/name: currencyservice
    spec:
      containers:
      - name: currencyservice-container
        image: currencyservice:v1
        ports:
        - containerPort: 7000
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 150Mi
        readinessProbe:
          grpc:
            port: 7000
          initialDelaySeconds: 15
          periodSeconds: 10
        livenessProbe:
          grpc:
            port: 7000
          initialDelaySeconds: 15
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: currencyservice
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: currencyservice
  ports:
  - port: 7000
    targetPort: 7000
    name: grpc
