k8s-manifests/emailservice.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emailservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: emailservice
  template:
    metadata:
      labels:
        app.kubernetes.io/name: emailservice
    spec:
      containers:
      - name: emailservice-container
        image: emailservice:v1
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 200m
            memory: 64Mi
          limits:
            cpu: 300m
            memory: 150Mi
        readinessProbe:
          grpc:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 10
        livenessProbe:
          grpc:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: emailservice
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: emailservice
  ports:
  - port: 8080
    targetPort: 8080
    name: grpc
