k8s-manifests/paymentservice.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: paymentservice
  template:
    metadata:
      labels:
        app.kubernetes.io/name: paymentservice
    spec:
      containers:
      - name: paymentservice-container
        image: paymentservice:v1
        ports:
        - containerPort: 50051
        resources:
          requests:
            cpu: 200m
            memory: 64mi
          limits:
            cpu: 300m
            memory: 150Mi
        readinessProbe:
          grpc:
            port: 50051
          initialDelaySeconds: 15
          periodSeconds: 10
        livenessProbe:
          grpc:
            port: 50051
          initialDelaySeconds: 15
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: paymentservice
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: paymentservice
  ports:
  - port: 50051
    targetPort: 50051
    name: grpc
