k8s-manifests/recommendationservice.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendationservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: recommendationservice
  template:
    metadata:
      labels:
        app.kubernetes.io/name: recommendationservice
    spec:
      containers:
      - name: recommendationservice-container
        image: recommendationservice:v1
      ports:
      - containerPort: 8080
      resources:
        requests:
          cpu: 200m
          memory: 64mi
        limits:
          cpu: 300m
          memory: 150Mi
      readinessProbe:
        grpc:
          port: 8080
        initialDelaySeconds: 15
        periodSeconds: 10
      livenessProbe:
        grpc:
          port: 8080
        initialDelaySeconds: 15
        periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: recommendationservice
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: recommendationservice
  ports:
  - port: 8080
    targetPort: 8080
    name: grpc
