k8s-manifests/redis-cart.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-cart
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: redis-cart
  template:
    spec:
      containers:
      - name: redis
        image: redis:8.0-alpine
        ports:
        - containerPort: 6379
        readinessProbe:
          periodSeconds: 5
          tcpSocket:
            port: 6379
        livenessProbe:
          periodSeconds: 5
          tcpSocket:
            port: 6379
        volumeMounts:
        - mountPath: /data
          name: redis-data
        resources:
          limits:
            memory: 256Mi
            cpu: 125m
          requests:
            cpu: 70m
            memory: 200Mi
        volumes:
        - name: redis-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: redis-cart
spec:
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
    name: tcp-redis
  selector:
    app.kubernetes.io/name: redis-cart
